tests/let-bindings/structural-patterns/ill-typed/test-1-2.stella
language core;

extend with #let-bindings, #let-patterns, #structural-patterns, #tuples;

fn main(n : Nat) -> Nat {
  return
  	let {x, y} = {0, true, false} in
    if y then x else succ(x)
}
